--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
             <h1 id="titre">Bienvenue sur le site de : <strong>Titouan Hirsch</strong></h1>
-            <img src="./resources/images/Titouan.jpg.png" alt="photo de profil">
+            <img src="Titouan.jpg.png" alt="photo de profil">
         </header>
         <main>
             <section class="axe">
@@ -40,7 +40,7 @@
                 </article>
                 <aside class="pièces_jointes">
                     <p>Obervez ci-dessous une des pubs réalisé pour le produit sur les réseaux sociaux :</p>
-                    <video id="pub_masque" src="./resources/images/snapchat ads.mp4" controls>Si vous voyez ce message, c'est que votre navigateur ne supporte pas la vidéo...</video>
+                    <video id="pub_masque" src="snapchat ads.mp4" controls>Si vous voyez ce message, c'est que votre navigateur ne supporte pas la vidéo...</video>
                 </aside>
             </section>
             <section class="axe">
