--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#intêrets">Mes centres d'intêrets</a></li>
                     <li><a href="#projets_perso">Mes projets personnels</a></li>
                     <li><a href="#xp_pro">Mes expériences professionnelles</a></li>
-                    <li>Mes objectifs</li>
+                    <li><a href="#objectifs">Mes objectifs</a></li>
                 </ul>
             </nav>
             <h1 id="titre">Bienvenue sur le site de : <strong>Titouan Hirsch</strong></h1>
@@ -59,7 +59,7 @@
                 </article> 
             </section>
             <section class="axe">
-                <h1>Mes objectifs de carrière</h1>
+                <h1 id="objectifs">Mes objectifs de carrière</h1>
                 <article class="commentaires">
                     <p>Je souhaite exercer dans le domaine du digital marketing et de la programmation. En effet, la combination ces deux secteurs est selon moi une des parties les plus importante d'un business aujourd'hui. Le succès des nouvelles entreprises reposent sur la maitrise de à la fois de la structure et de la stratégie dans cette nouvelle ère digitale</p>
                     <p>Comme dit précèdement, je tiens particulièrement au nouveau secteur du Web 3.0 et de la tech en générale, qui sont à mon avis encore loin de leur apogée</p>
